1.17 -> 2.0:
    - devzero2000: fail autogen.sh if autoreconf fail 
    - devzero2000: refine the --enable-valgrind autoconf check
      we are now analyzing with valgrind only the test suite
      and not the shell that invokes them, so drop the suppression. 
      Drop also the unused AM_CONDITIONAL macro USE_VALGRIND.
    - devzero2000: Don't use MALLOC_CHECK_ and valgrind(memcheck) at the
      same time
      The test suite can use valgrind(memcheck) via 'configure --enable-valgrind'
      Memcheck wraps client calls to malloc(), and puts a "red zone" on
      each end of each block in order to detect access overruns.
      Memcheck already detects double free() (up to the limit of the buffer
      which remembers pending free()). Thus memcheck subsumes all the
      documented coverage of MALLOC_CHECK_.
      If MALLOC_CHECK_ is set non-zero when running memcheck, then the
      overruns that might be detected by MALLOC_CHECK_ would be overruns
      on the wrapped blocks which include the red zones.  Thus MALLOC_CHECK_
      would be checking memcheck, and not the client.  This is not useful,
      and actually is wasteful.  The only possible [documented] advantage
      of using MALLOC_CHECK_ and memcheck together, would be if MALLOC_CHECK_
      detected duplicate free() in more cases than memcheck because memcheck's
      buffer is too small.
    - devzero2000: malloc check voodo portability quirk
      Get rid of a non portable shell export VAR=VALUE
      costruct. "Posix requires export to honor assignments
      made as arguments, but older shells do not support this,
      including /bin/sh in Solaris 10.
      Portable scripts should separate assignments
      and exports into different statements"
      (from http://www.gnu.org/savannah-checkouts/gnu/autoconf/manual/autoconf-2.69/html_node/Limitations-of-Builtins.html)
    - devzero2000: check secure_getenv for glibc 2.17 
      Use secure_getenv if it is available.